--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <meta name="monetag" content="442e081b23b372b88edb6b756418e7d6">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🔥 ChismeLatino VIP - Chismes y Escándalos de Famosos</title>
